# pyGaussDCA

./: .gitignore  README.md  TODO.md  build.sh  build_all.sh  pyproject.toml  setup.py
src/gaussdca/: __main__.py  _load_data.py  gaussdca.py
src/gaussdcapy/: __init__.py  __main__.py  _load_data.py  gaussdca.py
