[project]
name = "pygaussdca2"
version = "0.1.0"
description = "Reimplmentation of pyGaussDCA"
authors = [
    { name = "Ping Wu", email = "wpwupingwp@outlook.com" },
]
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "scipy>=1.15.3",
]

[[tool.uv.index]]
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
default = true

[dependency-groups]
dev = [
    "pip>=26.0.1",
    "pythran>=0.18.1",
    "setuptools<82",
]
